--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    {% block meta %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Really Deep Photography{% endblock %}</title>
+    {% endblock %}
 
-    <!-- Bootstrap CSS -->
+    {% block extra meta %}
+    {% endblock %}
+    
+    {% block corecss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-whatever" crossorigin="anonymous">
-
-    <!-- Additional CSS -->
+    {% endblock %}
+    
+    {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% endblock %}
+    
+    {% block extra_head %}
+    {% endblock %}
 
-    {% block extra_head %}{% endblock %}
+    <title>{% block title %}Really Deep Photography{% endblock %}</title>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -66,8 +76,12 @@
     </footer>
 
     <!-- Bootstrap JS and dependencies (Popper.js and jQuery) -->
+    {% block corejs %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-whatever" crossorigin="anonymous"></script>
+    {% endblock %}
 
-    {% block extra_js %}{% endblock %}
+    {% block extra_js %}
+    {% endblock %}
+
 </body>
 </html>
