--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,9 +1,47 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Home | Really Deep Photography{% endblock %}
+
 {% block content %}
-<div class="container">
-    <h1>Welcome to Really Deep Photography</h1>
-    <p>Explore beautiful, deep photography and purchase your favorites.</p>
+<div class="container mt-5">
+    <section class="home-welcome">
+        <h2 class="text-center">Featured Collections</h2>
+        <p class="lead text-center">Explore our exclusive photo collections from renowned photographers.</p>
+        <!-- Add more home-specific content here, like featured photos or categories -->
+        <div class="row mt-4">
+            <!-- Example featured photos section -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="{% static 'images/featured1.jpg' %}" class="card-img-top" alt="Featured Photo 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Deep Nature</h5>
+                        <p class="card-text">Discover stunning photos of nature at its finest.</p>
+                        <a href="#" class="btn btn-primary">View Collection</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="{% static 'images/featured2.jpg' %}" class="card-img-top" alt="Featured Photo 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Urban Life</h5>
+                        <p class="card-text">See the beauty of cities through a creative lens.</p>
+                        <a href="#" class="btn btn-primary">View Collection</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="{% static 'images/featured3.jpg' %}" class="card-img-top" alt="Featured Photo 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Abstract Art</h5>
+                        <p class="card-text">Abstract photography that challenges perception.</p>
+                        <a href="#" class="btn btn-primary">View Collection</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 {% endblock %}
