--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="mt-5">Gallery</h1>
+    <h1 class="mt-1">Gallery</h1>
     <p>Explore our collection of beautiful deep photography.</p>
 
     <div class="row">
@@ -14,7 +14,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Photo Title 1</h5>
                     <p class="card-text">Description of Photo 1.</p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-primary text-white">View Details</a>
                 </div>
             </div>
         </div>
@@ -26,7 +26,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Photo Title 2</h5>
                     <p class="card-text">Description of Photo 2.</p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-primary text-white">View Details</a>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Photo Title 3</h5>
                     <p class="card-text">Description of Photo 3.</p>
-                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-primary text-white">View Details</a>
                 </div>
             </div>
         </div>
