--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,32 +1,17 @@
-{% extends "account/base_entrance.html" %}
-{% load i18n allauth account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
+{% extends "base.html" %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    {% endelement %}
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% element p %}
-        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-    {% endelement %}
-{% endblock content %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="text-center mb-4">Reset Your Password</h2>
+            <div class="card shadow-sm p-4">
+                <form method="post" action="{% url 'account_reset_password' %}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button class="btn btn-dark w-100" type="submit">Send Reset Email</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
