Create cart and cart item models, update urls, add cart html

--- a/home/templates/home/gallery.html
+++ b/home/templates/home/gallery.html
@@ -6,6 +6,21 @@
     <h1 class="mt-1">Gallery</h1>
     <p>Explore our collection of beautiful deep photography.</p>
 
+    <!-- Cart Link -->
+    <div class="mb-3">
+        <a href="{% url 'view_cart' %}" class="btn btn-outline-info">
+            View Cart (
+            {% if user.is_authenticated %}
+                {% with request.user.cart.items.count as cart_count %}
+                    {{ cart_count }}
+                {% endwith %}
+            {% else %}
+                0
+            {% endif %}
+            )
+        </a>
+    </div>
+
     <div class="row">
         {% if photos %}
             {% for photo in photos %}
