--- a/home/templates/home/photo_detail.html
+++ b/home/templates/home/photo_detail.html
@@ -4,6 +4,22 @@
 {% block content %}
 <div class="container mt-4">
     <h1>{{ photo.title }}</h1>
+
+    <!-- Cart Link -->
+    <div class="mb-3">
+        <a href="{% url 'view_cart' %}" class="btn btn-outline-info">
+            View Cart (
+            {% if user.is_authenticated %}
+                {% with request.user.cart.items.count as cart_count %}
+                    {{ cart_count }}
+                {% endwith %}
+            {% else %}
+                0
+            {% endif %}
+            )
+        </a>
+    </div>
+
     <div class="row">
         <div class="col-md-6">
             <img src="{{ photo.image.url }}" class="img-fluid" alt="{{ photo.title }}">
@@ -16,6 +32,8 @@
             <h4>Price</h4>
             <p>{{ photo.price_display }}</p>
             <a href="{% url 'gallery' %}" class="btn btn-primary">Back to Gallery</a>
+            <!-- Add an option to add to cart -->
+            <a href="{% url 'add_to_cart' photo.id %}" class="btn btn-success">Add to Cart</a>
         </div>
     </div>
 </div>
