--- a/templates/base.html
+++ b/templates/base.html
@@ -57,8 +57,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'view_cart' %}">Cart (
                                 {% if user.is_authenticated %}
-                                    {% with request.user.cart.items.count as cart_count %}
-                                        {{ cart_count }}
+                                    {% with cart=user.cart.items.count %}
+                                        {{ cart }}
                                     {% endwith %}
                                 {% else %}
                                     0
