Add info to contact and about page

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -10,7 +10,7 @@
     <p>At Really Deep Photography, our mission is to provide high-quality prints that not only beautify your space but also evoke emotions and memories. We believe that a great photograph can make a lasting impression.</p>
 
     <h2>Our Journey</h2>
-    <p>Founded by [Your Name], Really Deep Photography has grown from a hobby into a thriving business. With years of experience and a keen eye for detail, we strive to offer unique perspectives in every shot we take.</p>
+    <p>Founded by Robert Craig Dickerson, Really Deep Photography has grown from a hobby into a thriving business. With years of experience and a keen eye for detail, he strives to offer unique perspectives in every shot he takes.</p>
 
     <h2>Meet the Photographer</h2>
     <div class="row mb-4">
@@ -18,8 +18,8 @@
             <img src="{% static 'images/photographer.jpg' %}" class="img-fluid rounded-circle" alt="Photographer">
         </div>
         <div class="col-md-8">
-            <h3>[Your Name]</h3>
-            <p>[Your Name] is a passionate photographer with a love for [describe your style or areas of focus]. With a background in [mention any relevant experience or education], [he/she/they] brings creativity and professionalism to every project.</p>
+            <h3>Robert Craig Dickerson</h3>
+            <p>Robert Craig Dickerson is a passionate photographer with a love for atmospheric and totally deep meaning photography. With a background in taking super-emotional pictures with his cool phone, he brings creativity and professionalism to every project.</p>
         </div>
     </div>
 
