--- a/home/templates/home/photo_detail.html
+++ b/home/templates/home/photo_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load custom_filters %}  <!-- Load the custom filter -->
 
 {% block content %}
 <div class="container mt-4">
@@ -22,7 +23,8 @@
 
     <div class="row">
         <div class="col-md-6">
-            <img src="{{ photo.image.url }}" class="img-fluid" alt="{{ photo.title }}">
+            <!-- Cloudinary image with optimization -->
+            <img src="{{ photo.image.url|cloudinary_optimized }}" class="img-fluid" alt="{{ photo.title }}">
         </div>
         <div class="col-md-6">
             <h4>Description</h4>
