--- a/home/templates/home/checkout.html
+++ b/home/templates/home/checkout.html
@@ -1,2 +1,2 @@
 <h1>Checkout</h1>
-<p>This will be the checkout page in the near future.</p>
+<p>This will hopefully be a working checkout page in the near future.</p>
